ast/src/snapshots/transmute_ast__parser__tests__err_struct_missing_greater_after_type_parameters6.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected number(0), expected one of (2) identifier, `>`",
                span: 1:12; [11, 12],
                level: Error,
            },
        ],
        inputs: (),
    },
)
