ast/src/snapshots/transmute_ast__parser__tests__err_struct_missing_name.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `{`, expected one of (1) identifier",
                span: 1:8; [7, 8],
                level: Error,
            },
        ],
        inputs: (),
    },
)
