ast/src/snapshots/transmute_ast__parser__tests__err_unprotected_struct_in_if_expression_2.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"if Point{} - 1 {}\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `{`, expected one of (14) `;`, `.`, `=`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`, `[`",
                span: 1:16; [15, 16],
                level: Error,
            },
        ],
    },
)
