ast/src/snapshots/transmute_ast__parser__tests__err_while_missing_close_curly_bracket.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"while true {\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected `}` to close `{` at 1:12, got `eof`",
                span: 1:13; [12, 12],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    1966,
                ),
            },
        ],
    },
)
