ast/src/snapshots/transmute_ast__parser__tests__err_while_missing_condition.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"while { }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `{`, expected one of (8) identifier 948, number 949, `true` 951, `false` 952, `if` 946, `while` 947, `(` 953, `-` 950",
                span: 1:7; [6, 7],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    942,
                ),
            },
        ],
    },
)
