ast/src/snapshots/transmute_ast__parser__tests__expression_literal_boolean.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"true;\")).parse()"
---
Ok(
    Ast {
        identifiers: [],
        identifier_refs: [],
        expressions: [
            Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Boolean(true),
                        span: 1:1; [0, 4],
                    },
                ),
                span: 1:1; [0, 4],
            },
        ],
        statements: [
            Statement {
                id: StmtId(0),
                kind: Expression(
                    ExprId(0),
                ),
                span: 1:1; [0, 5],
            },
        ],
        roots: [
            StmtId(0),
        ],
    },
)
